--- a/index.html
+++ b/index.html
@@ -172,6 +172,19 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- Design of PEVA-->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Design of PEVA</h2>
+    <div class="hero-body">
+      <img src="static/images/archv3.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          To train on an input video, we choose a random subset of frames and encode them via a fixed encoder (a). They are then fed to a CDiT that is trained autoregressively with teacher forcing (b). During the denoising process, each token attends to same-image tokens and cross-attends to clean tokens from past image(s). Action conditioning is done via AdaLN layers.
+        </h2>
+    </div>
+  </div>
+</section>
+<!-- Design of PEVA-->
 
 <!-- Atomic Actions-->
 <section class="section">
